--- a/src/App.css
+++ b/src/App.css
@@ -1337,7 +1337,7 @@ cursor: pointer;
 
 /*rota Usuarios Home*/
 
-.Logusu{ /**/
+.UsuNav:not(.imgusu){ /**/
   position: fixed;
   border: solid 2px rgb(255, 255, 255);
   border-radius:  20vh;
