--- a/front/src/App.css
+++ b/front/src/App.css
@@ -36,6 +36,35 @@
 /*Por hora pra poder pelo menos organizar*/
 /*----------------------------------MENU HEADER COMEÇO-------------------------*/
 
-.slideDen{
-  background-color: green;
+
+@media (max-width: 768px) { /* estilo para telas pequenininhnas */
+  .swiper-container {
+    width: 100%;
+    height: 420px;
+    display: flex;
+  } 
+}
+
+@media (max-width: 768px) {
+  .swiper-slide {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  }
+}
+
+
+
+@media (min-width: 769px) and (max-width: 1024px) { /* telas maiores que 768px e menores que 1024, MÉDIAS */
+  .swiper-container {
+    width: 80%;
+  }
+}
+
+
+
+@media (max-width: 1025px) { /* telas maiores que 1024px, GRANDES */
+  .swiper-container {
+    width: 100%;
+  }
 }
