--- a/front/src/App.css
+++ b/front/src/App.css
@@ -23,6 +23,16 @@
   src: url('./fontes/Asap/Asap-Regular.ttf') format('truetype'); 
 }
 
+.bola-direita {
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(0); /* Posição inicial da bola */
+}
+
+.bola-esquerda {
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(-100px); /* Posição à esquerda quando o tipo de usuário não é denunciante */
+}
+
 
 
 
